--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="user_label">Usuario</string>
     <string name="pass_label">Contraseña</string>
-    <string name="info_selec">Por favor, seleccione el paciente a tratar</string>
+    <string name="info_selec">Seleccione un paciente</string>
 
     <!-- Content Description -->
     <string name="desc_list_item_icon">Item Icon</string>
@@ -15,7 +15,7 @@
     <string name="title_section3">Observación</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_example">Example action</string>
+    <string name="action_example">""</string>
     <string name="title_activity_control">Panel de Control</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
