--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,14 @@
     <string name="title_activity_control">Panel de Control</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="critical_notification_title_template">Critical: Un paciente tiene un estado crítico</string>
+
+    <!-- TODO: remove this placeholder text -->
+    <string name="critical_notification_placeholder_text_template">El paciente Manuel Perez tiene un nivel crítico de
+        oxígeno.
+    </string>
+
+    <string name="action_share">Share</string>
+    <string name="action_reply">Reply</string>
+
 </resources>
